[package]
name = "aptos_route"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "aptos_route"
# path = "src/service.rs"
[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { version = "0.10" }
ciborium = "0.2.1"
ic-cdk = "0.14"

serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "^1.0.117"
serde_bytes = "^0.11.14"
serde_with = "3.8"
serde_repr = "0.1"
schemars = { version = "0.8.21", features = ["either"] }
colored = "2.0.0"
json_to_table = { git = "https://github.com/zhiburt/tabled/", rev = "e449317a1c02eb6b29e409ad6617e5d9eb7b3bd4" }
tabled = { version = "0.12" }

ic-cdk-timers = "0.6"
ic-stable-structures = "0.6"
thiserror = "1"
anyhow = "1.0.86"
strum_macros = "0.25.3"
strum = { version = "0.25.0", features = ["derive"] }
sha2 = "0.10"
# hex = "0.4"
hex = { version = "0.4.3", features = ["serde"] }

ic-canister-log = "0.2"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", package = "ic-canisters-http-types" }

ic-crypto-ed25519 = { package = "ic-ed25519", version = "0.2.0" }
ic-management-canister-types = "0.1.0"


futures = "0.3.30"
futures-core = "0.3.21"
urlencoding = "2.1"
bs58 = "0.5.1"
time = "0.3.36"
bip32 = { version = "0.5.1", features = ["k256"] }
k256 = { git = "https://github.com/altkdf/elliptic-curves", branch = "schnorr_canister", features = [
    "schnorr",
] }
# curve25519-dalek = "3.2.1"
# ed25519-dalek = "2.1"
ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
base64 = "0.22.1"
url = "2.5.0"
indexmap = { version = "2.1.0", features = ["serde"] }
bcs = "0.1.4"
roaring = "0.10.6"
enum_dispatch = "^0.3"
nonempty = "0.9.0"
itertools = "0.13.0"
serde-name = "0.2.1"
once_cell = "1.18.0"
derive_more = { version = "1.0.0", features = ["full"] }
eyre = "0.6.8"
im = "15"
byteorder = "1.4.3"
ref-cast = "1.0.6"
uint = "0.9.4"
ethnum = "1.0.4"
num = "0.4.0"
primitive-types = { version = "0.10.1", features = ["impl-serde"] }
leb128 = "0.2.5"
signature = { version = "2.0.0" }
base64ct = { version = "1.5.3", features = ["alloc"] }
bech32 = "0.9.1"
generic-array = { version = "0.14.6", features = ["serde"] }
blake2 = "0.10.6"
getrandom = { version = "0.2", features = ["custom"] }
typenum = "1.13.0"
zeroize = "1.5.7"
digest = "0.10.6"
# http = "1"
bincode = "1.3.3"

# [patch.crates-io.curve25519-dalek]
# git = "https://github.com/solana-labs/curve25519-dalek.git"
# rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
# aptos deps
# ic-aptos = { path = "../ic-aptos" }
# ic-aptos = { git = "https://github.com/boern/ic-aptos", branch = "mainnet" }

aptos-types = { path = "../ic-aptos/crates/aptos-types" }
move-core-types = { path = "../ic-aptos/crates/move-core-types" }
aptos-crypto-derive = { path = "../ic-aptos/crates/aptos-crypto-derive" }
aptos-crypto = { path = "../ic-aptos/crates/aptos-crypto" }
aptos-cached-packages = { path = "../ic-aptos/crates/aptos-cached-packages" }
# aptos-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet", package = "aptos-types" }
# move-core-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet", package = "move-core-types" }
# aptos-crypto-derive = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet", package = "aptos-crypto-derive" }
# aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet", package = "aptos-crypto" }
# aptos-json-rpc-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet", package = "aptos-json-rpc-types" }
# aptos-client = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet", package = "aptos-client" }
# aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet", package = "aptos-sdk" }

aptos-global-constants = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet", package = "aptos-global-constants" }
[patch.crates-io]
# merlin = { git = "https://github.com/aptos-labs/merlin" }
# x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }

# [build]
# rustflags = ["--cfg", "tokio_unstable"]

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

[dev-dependencies]
# ic-crypto-ed25519 = { git = "https://github.com/dfinity/ic", package = "ic-crypto-ed25519" }
urlencoding = "2.1"
# tracing = "0.1.37"
# tokio = "1.36.0"
# tokio-retry = "0.3"
# rand = "0.8.5"
