[package]
name = "aptos_route"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { version = "0.10" }
ciborium = "0.2.1"
ic-cdk = "0.14"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde-big-array = "0.5.1"
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = [
    "preserve_order",
    "arbitrary_precision",
] } # Note: arbitrary_precision is required to parse u256 in JSON
serde_repr = "0.1"
serde_merge = "0.1.3"
serde-name = "0.1.1"
serde-generate = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
serde_with = "3.4.0"

schemars = { version = "0.8.21", features = ["either"] }
colored = "2.0.0"
json_to_table = { git = "https://github.com/zhiburt/tabled/", rev = "e449317a1c02eb6b29e409ad6617e5d9eb7b3bd4" }
tabled = { version = "0.12" }

ic-cdk-timers = "0.6"
ic-stable-structures = "0.6"
thiserror = "1"
anyhow = "1.0.86"
strum_macros = "0.25.3"
strum = { version = "0.25.0", features = ["derive"] }
sha2 = "0.10"
# hex = "0.4"
hex = { version = "0.4.3", features = ["serde"] }

ic-canister-log = "0.2"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", package = "ic-canisters-http-types" }

ic-crypto-ed25519 = { package = "ic-ed25519", version = "0.2.0" }
ic-management-canister-types = "0.1.0"


futures = "0.3.30"
futures-core = "0.3.21"
urlencoding = "2.1"
bs58 = "0.5.1"
time = "0.3.36"
bip32 = { version = "0.5.1", features = ["k256"] }
k256 = { git = "https://github.com/altkdf/elliptic-curves", branch = "schnorr_canister", features = [
    "schnorr",
] }
# curve25519-dalek = "3.2.1"
# ed25519-dalek = "2.1"
ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
base64 = "0.22.1"
url = "2.5.0"
indexmap = { version = "2.1.0", features = ["serde"] }
bcs = "0.1.4"
roaring = "0.10.6"
enum_dispatch = "^0.3"
nonempty = "0.9.0"
itertools = "0.13.0"
# serde-name = "0.2.1"
once_cell = "1.18.0"
derive_more = { version = "1.0.0", features = ["full"] }
eyre = "0.6.8"
im = "15"
byteorder = "1.4.3"
ref-cast = "1.0.6"
uint = "0.9.4"
ethnum = "1.0.4"
num = "0.4.0"
primitive-types = { version = "0.10.1", features = ["impl-serde"] }
leb128 = "0.2.5"
signature = { version = "2.0.0" }
base64ct = { version = "1.5.3", features = ["alloc"] }
bech32 = "0.9.1"
generic-array = { version = "0.14.6", features = ["serde"] }
blake2 = "0.10.6"
getrandom = { version = "0.2", features = ["custom"] }
typenum = "1.13.0"
zeroize = "1.5.7"
digest = "0.10.6"
# http = "1"
bincode = "1.3.3"

aptos-types = { git = "https://github.com/octopus-network/ic-aptos", package = "aptos-types" }
move-core-types = { git = "https://github.com/octopus-network/ic-aptos", package = "move-core-types" }
aptos-crypto-derive = { git = "https://github.com/octopus-network/ic-aptos", package = "aptos-crypto-derive" }
aptos-crypto = { git = "https://github.com/octopus-network/ic-aptos", package = "aptos-crypto" }
aptos-cached-packages = { git = "https://github.com/octopus-network/ic-aptos", package = "aptos-cached-packages" }
aptos-api-types = { git = "https://github.com/octopus-network/ic-aptos", package = "aptos-api-types" }

aptos-global-constants = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet", package = "aptos-global-constants" }
[patch.crates-io]

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

[dev-dependencies]
urlencoding = "2.1"
aptos-types = { git = "https://github.com/octopus-network/ic-aptos", package = "aptos-types" }
move-core-types = { git = "https://github.com/octopus-network/ic-aptos", package = "move-core-types" }
aptos-crypto-derive = { git = "https://github.com/octopus-network/ic-aptos", package = "aptos-crypto-derive" }
aptos-crypto = { git = "https://github.com/octopus-network/ic-aptos", package = "aptos-crypto" }
aptos-cached-packages = { git = "https://github.com/octopus-network/ic-aptos", package = "aptos-cached-packages" }
aptos-api-types = { git = "https://github.com/octopus-network/ic-aptos", package = "aptos-api-types" }

# ic-crypto-ed25519 = { git = "https://github.com/dfinity/ic", package = "ic-crypto-ed25519" }
# tracing = "0.1.37"
# tokio = "1.36.0"
# tokio-retry = "0.3"
# rand = "0.8.5"
